AUGREL/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_Duty_End_Date__c</fullName>
        <label>Active Duty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Duty_Start_Date__c</fullName>
        <label>Active Duty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affected_Key_Factors__c</fullName>
        <label>Affected Key Factors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Probate_Date_of_Death__c</fullName>
        <description>SRC:  Lex-Nex
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Probate Date of Death</description>
        <label>Probate Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO_SCRA_Military_Source__c</fullName>
        <description>SRC: UCM
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: TFS SCRA Military Source</description>
        <label>SCRA Military Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Special_Handling_Flag__c</fullName>
        <description>SRC: UCM
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Special Handling indicator</description>
        <label>Special Handling Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPersonAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Account - Parent of Weblogin contact</description>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Weblogins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Credit_Report__c</fullName>
        <label>Date of Credit Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>This field is used to populate extension for the contact phone number by integration. Created as a part of R7</description>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO_Missing_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FICO Missing Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FICO_Score__c</fullName>
        <label>FICO Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Deceased__c</fullName>
        <label>Flag Deceased</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Lead__c</fullName>
        <label>Flag Lead</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Prison__c</fullName>
        <label>Flag Prison</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark a contact inactive</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Status__c</fullName>
        <label>Military Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Suffix__c</fullName>
        <label>Name Suffix</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Employer_City__c</fullName>
        <description>SRC: Pending
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Primary Debtor Employer Address City</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Employer_Country_Code__c</fullName>
        <description>SRC: Pending
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Primary Debtor Employer Address Country</description>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>Person Employer Country Code</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Employer_Email__c</fullName>
        <description>SRC: RMS / SFDC
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Primary Debtor Employer Email Address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Person_Employer_Fax__c</fullName>
        <description>SRC: RMS / SFDC 
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Primary Debtor Employer Fax Number</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_Employer_Name__c</fullName>
        <label>Person Employer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Employer_PostalCode__c</fullName>
        <description>SRC: Pending
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Primary Debtor Employer Address Postal Code</description>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Employer_State__c</fullName>
        <description>SRC: Pending
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Primary Debtor Employer Address State</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Employer_Street__c</fullName>
        <description>SRC: Pending
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Primary Debtor Employer Address Street</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Person_Employer_Work_Phone__c</fullName>
        <description>SRC: RMS / SFDC
INT: Y 
Trans: N 
BU: Charged Off Accounts Servicing 
FD: Primary Debtor Employer Work Phone Number</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Person_Employer_Zip_Code_Extn__c</fullName>
        <description>SRC: Pending
INT: Y
Trans: N
BU: Charged Off Accounts Servicing
FD: Primary Debtor Employer Address Postal Code Extension</description>
        <label>Zip Code Extn</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGUID__c</fullName>
        <description>Unique federation identifier provided by TFSWeb IDP</description>
        <externalId>true</externalId>
        <label>SGUID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Branch__c</fullName>
        <label>Service Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Air Force Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Corps Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marines Corps Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number_Last_4_Chars__c</fullName>
        <formula>TRIM(RIGHT(Social_Security_Number__c, 4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Security Number Last 4 Chars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number_Last_6_Chars__c</fullName>
        <formula>TRIM(RIGHT(Social_Security_Number__c, 6))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Security Number Last 6 Chars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <externalId>true</externalId>
        <label>Social Security Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_CompanyName__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_DeProvisioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web DeProvisioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_UserId__c</fullName>
        <label>Web UserId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Dealer_Contact</fullName>
        <active>true</active>
        <description>Used for contacts at the dealers</description>
        <label>Dealer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weblogin</fullName>
        <active>true</active>
        <description>Record type for customer community web login for TFS or LFS</description>
        <label>Weblogin</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Edit_On_Dealer_Contacts</fullName>
        <active>true</active>
        <description>Only allow users with the UC Contact Edit perm set to create/edit/delete contacts associated to dealerships</description>
        <errorConditionFormula>AND(Account.RecordType.DeveloperName &lt;&gt; &quot;Dealer&quot;,  $Profile.Name = &quot;Universal Console - Base&quot;)</errorConditionFormula>
        <errorMessage>Can only create edit or delete contacts associated to dealers.</errorMessage>
    </validationRules>
</CustomObject>